--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     
       <section id="slider">
         <div class="slider-container aspect-ratio-169">
-          <img src="./Images/1.jpg" alt="">
+          <img src="./Images/6.png" alt="">
           <img src="./Images/2.jpg" alt="">
           <img src="./Images/3.jpg" alt="">
           <img src="./Images/4.jpg" alt="">
@@ -100,7 +100,7 @@
     </div>
     <div class="footer-bottom">
       <p>
-        ©Ivymoda All rights reserved
+        ©FLORA COMESTIC All rights reserved
       </p>
     </div>
     
