--- a/delivery.html
+++ b/delivery.html
@@ -244,100 +244,100 @@
             </div>
             <div class="step-items">
                 <div class="step-item ">
-                    <p>Giỏ hàng</p>
+                    <p>cart</p>
                     <i class="fas fa-shopping-cart"></i>
                 </div>
                 <div class="step-item now">
-                    <p>Địa chỉ giao hàng</p>
+                    <p>Delivery address</p>
                     <i class="fas fa-map-marker-alt"></i>
                 </div>
                 <div class="step-item">
-                    <p>Thanh toán</p>
+                    <p>Pay</p>
                     <i class="fas fa-money-check-alt"></i>
                 </div>
             </div>
         </div>
         <div class="delivery-content row">
             <div class="delivery-left">
-                <p>Vui lòng chọn địa chỉ giao hàng</p>
+                <p>Please select a shipping address</p>
                 <div class="delivery-account delivery-login">
                     <i class="fas fa-sign-in-alt"></i>
-                    <p>Đăng nhập (Nếu bạn đã có tài khoản của IVY)</p>
+                    <p>Login (If you already have an account of FLORA)</p>
                 </div>
                 <div class="delivery-account delivery-khachle">
                     <input type="radio" name="typecustomer" checked id="">
-                    <p><span style="font-weight: bold;">Khách lẻ </span>(Nếu bạn không muốn lưu lại thông tin)</p>
+                    <p><span style="font-weight: bold;">FIt </span>(If you do not want to save the information)</p>
                 </div>
                 <div class="delivery-account delivery-signup">
                     <input type="radio" name="typecustomer" id="">
-                    <p><span style="font-weight: bold;">Đăng ký </span>(Tạo mới tài khoản với thông tin bên dưới)</p>
+                    <p><span style="font-weight: bold;">Register </span>(Create a new account with the information below)</p>
                 </div>
                 <div class="delivery-input-top row">
                     <div class="delivery-input-item">
-                        <label for="">Họ tên <span style="color: red;">*</span></label>
+                        <label for="">Full name <span style="color: red;">*</span></label>
                         <input type="text">
                     </div>
                     <div class="delivery-input-item">
-                        <label for="">Điện thoại <span style="color: red;">*</span></label>
+                        <label for="">Phone <span style="color: red;">*</span></label>
                         <input type="text">
                     </div>
                     <div class="delivery-input-item">
-                        <label for="">Tỉnh/TP <span style="color: red;">*</span></label>
+                        <label for="">Province/City <span style="color: red;">*</span></label>
                         <select name="city">
-                        <option value="">Chọn Tỉnh/TP</option>
+                        <option value="">Select Province/City</option>
                         
                         </select>
                     </div>
                     <div class="delivery-input-item">
-                        <label for="">Quận/Huyện <span style="color: red;">*</span></label>
+                        <label for="">District <span style="color: red;">*</span></label>
                         <select name="district">
-                            <option value="">Chọn Quận/Huyện</option>
+                            <option value="">Select District/District</option>
                             </select>
                     </div>
                 </div>
                 <div class="delivery-input-bottom">
-                    <label for="">Phường/Xã <span style="color: red;">*</span></label>
+                    <label for="">ward/commune <span style="color: red;">*</span></label>
                     <select name="wards">
-                        <option value="">Chọn Phường/Xã</option>
+                        <option value="">Select Ward/Commune</option>
                         </select>
                 </div>
                 <div class="delivery-input-bottom">
-                    <label for="">Địa chỉ <span style="color: red;">*</span></label>
+                    <label for="">Address <span style="color: red;">*</span></label>
                     <input type="text">
                 </div>
                 <div class="delivery-bottom">
-                    <a href=""><span>&#171;</span> Quay lại giỏ hàng</a>
-                    <button>Thanh toán và giao hàng</button>
+                    <a href=""><span>&#171;</span> Back to cart</a>
+                    <button>Payment and delivery</button>
                 </div>
             </div>
             <div class="delivery-right">
                 <table>
                     <tr>
-                        <th>Tên sản phẩm</th>
-                        <th>Giảm giá</th>
-                        <th>Số lượng</th>
-                        <th>Thành tiền</th>
+                        <th>Product's name</th>
+                        <th>Discount</th>
+                        <th>Amount</th>
+                        <th>into money</th>
                     </tr>
                     <tr>
-                        <td>Áo kiểu tay thắt nơ MS 16B7763 <br> L / Họa tiết Xanh Oliu <br> 16B7763 / <span>690.000<sup>đ</sup></span>
+                        <td> bow tie sleeve top MS 16B7763<br> L / Green Textures Oliu <br> 16B7763 / <span>690.000<sup>đ</sup></span>
                         </td>
                         <td>-60%</td>
                         <td>1</td>
                         <td>276.000 <sup>đ</sup></td>
                     </tr>
                     <tr>
-                        <td>Áo kiểu tay thắt nơ MS 16B7763 <br> L / Họa tiết Xanh Oliu <br> 16B7763 / <span>690.000<sup>đ</sup></span>
+                        <td>bow tie sleeve top MS 16B7763 <br> L / Green Textures Oliu <br> 16B7763 / <span>690.000<sup>đ</sup></span>
                         </td>
                         <td>-60%</td>
                         <td>1</td>
                         <td>276.000 <sup>đ</sup></td>
                     </tr>
                     <tr>
-                        <td colspan="3">Tổng tiền hàng <span>2.070.000<sup>đ</sup></span></td>
+                        <td colspan="3">Total amount of goods <span>2.070.000<sup>đ</sup></span></td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td colspan="3">Tạm tính </td>
+                        <td colspan="3">Provisional </td>
                         <td><span>828.000<sup>đ</sup></span></td>
                     </tr>
                 </table>
